# mussia30

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitmodules  .gitpod.yml  .npmrc  BUILD  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  Tiltfile  WORKSPACE  a.txt  cloudbuild.yaml  compose.yaml  cypress.config.js  deno.json  go.mod  go.sum  import_map.json  justfile  main.py  main.ts  my_custom_rule.bzl  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  recipe.json  tsconfig.base.json  vite.config.js
.github/workflows/: daily.yml  manual-docker.yaml  node.js.yml  rust-docker-test.yml  tags.yaml
_proto/: users.proto
apps/deno/: BUILD
apps/deno/rest-api/: project.json
apps/frontend/host/: .eslintrc.js  Taskfile.yaml  Tiltfile  jest.config.ts  package.json  project.json  readme.md
apps/frontend/host-e2e/: project.json
apps/frontend/react-app/: project.json  vite.config.ts
apps/frontend/react-app-e2e/: project.json
apps/gcp/dead-letter-subscription/: jest.config.ts  project.json
apps/gcp/gcp-dead-letter-subscription-e2e/: jest.config.ts  project.json
apps/go/api-graphql/: main.go  project.json
apps/go/api-rest/: BUILD  main.go  project.json
apps/go/users-grpc/: main.go  project.json
apps/node/api-graphql/: jest.config.ts  project.json
apps/node/api-rest/: BUILD  jest.config.ts  project.json
apps/node/api-rest-infrastructure/: Pulumi.yaml  README.md  package.json  project.json  tsconfig.json
apps/node/api-trpc/: jest.config.ts  project.json
apps/node/dead/: jest.config.ts  project.json
apps/node/dead-letter-subscription/: jest.config.ts  project.json
apps/node/node-dead-e2e/: jest.config.ts  project.json
apps/node/node-dead-letter-subscription-e2e/: jest.config.ts  project.json
apps/node/users-grpc/: Tiltfile  jest.config.ts  project.json
apps/node/users-redis/: jest.config.ts  project.json
apps/rust/api-graphql/: Cargo.toml  project.json
apps/rust/api-graphql/src/: main.rs
apps/rust/api-rest/: Cargo.toml  Dockerfile  README.md  Tiltfile  project.json  recipe.json
apps/rust/api-rest/bindings/: User.ts
apps/rust/api-rest/k8s/base/: deployment.yml  ingress.yaml  kustomization.yml  service-account.yaml  service.yml
apps/rust/api-rest/src/: common.rs  logging.rs  main.rs  model.rs  random.rs  swagger.rs  test.rs  todo.rs
apps/rust/api-rest/src/product/: handlers.rs  mod.rs  model.rs
apps/rust/api-rest/src/todo/: mod.rs  model.rs
apps/rust/api-rest/src/user/: handlers.rs  mod.rs  model.rs  router.rs
apps/rust/api-rest/src/utils/: mod.rs  mongo.rs
apps/rust/api-rest1/: Cargo.toml  project.json
apps/rust/book-controller/: Cargo.toml  Tiltfile  project.json
apps/rust/book-controller/k8s/: book.yaml
apps/rust/book-controller/src/: crd.rs  finalizer.rs  main.rs
apps/rust/cli/: Cargo.toml  project.json
apps/rust/k8s-operator/: Cargo.toml  project.json
apps/rust/k8s-operator/k8s/: topology.yaml
apps/rust/k8s-operator/src/: main.rs
apps/rust/k9s-controller/: Cargo.toml  project.json
apps/rust/my-cli/: Cargo.toml  project.json
apps/rust/my-cli/src/: gradient.rs
apps/rust/my-operator/: Cargo.toml  project.json
apps/rust/personal-cli/: Cargo.toml  project.json
apps/rust/personal-cli/src/: args.rs  lib.rs  main.rs
apps/rust/users-grpc/: Cargo.toml  project.json
apps/rust/users-grpc/src/: main.rs
apps/rust/users-redis/: Cargo.toml  project.json
apps/rust/users-redis/src/: main.rs
deno/destjs-app/: main_bench.ts
deno/nest-app/: Dockerfile  Taskfile.yaml  Tiltfile  deno.json  main.ts  main_bench.ts  main_test.ts  project.json
deno/nest-app/api-rest/: Tiltfile  project.json
deno/oak/: Dockerfile  hello-world.ts
deno/remix-blog-tutorial/: README.md  fly.toml  package-lock.json  package.json
examples/my-nx/: README.md  nx.json  package.json  pnpm-lock.yaml
examples/my-turborepo/: package.json
examples/personal-desktop-app/src/: app.rs
k8s/: Cargo.toml  Taskfile.yaml  example-data.json  justfile  main.ts  main_bench.ts  main_test.ts
k8s/argocd/: apps.yaml
k8s/base/: kustomization.yaml
k8s/base/argocd/: Taskfile.yaml
k8s/base/cdk8s-output/: cdk8s-example.k8s.yaml  construct-metadata.json  kustomize-example-app1.k8s.yaml  kustomize-example.k8s.yaml
k8s/base/crossplane/: Taskfile.yaml  gcpProvider.yaml
k8s/base/kaniko/: build.yaml  kustomization.yaml
k8s/helm/: Tiltfile
k8s/helm/local-cluster/: Chart.yaml  values.yaml
k8s/kaniko/: build.yaml
k8s/src/: main.rs
libs/go/fiber-helpers/: go-fiber-helpers.go
libs/go/generic-api/: go-generic-api.go  go-generic-api_test.go  mongo-store.go
libs/go/mongodb/: go-mongodb.go
libs/go/service-pb/: go-service-pb.go  go-service-pb_test.go  project.json
libs/go/shared/: go-shared_test.go
libs/node/bindings/: README.md  jest.config.ts  project.json
libs/node/firebase-admin/: README.md  jest.config.ts  project.json
libs/node/grpc/: README.md  jest.config.ts  project.json
libs/node/state-machines/: README.md  jest.config.ts  project.json
libs/node/ts-utils/: README.md  jest.config.ts  project.json
libs/node/xstate-machines/: jest.config.ts  project.json
libs/rust/: README.md
libs/rust/graphql/starwars/: Cargo.toml  project.json
libs/rust/graphql/starwars/src/: lib.rs  model.rs
libs/rust/grpc/: Cargo.toml
libs/rust/grpc/src/: lib.rs
libs/rust/mongo/: Cargo.toml
libs/rust/mongo/src/: lib.rs  repository.rs
libs/speedtest/: Cargo.toml  project.json
platform/argocd/: Taskfile.yaml
platform/cluster/: Taskfile.yaml
platform/core/: Pulumi.aris.yaml  Pulumi.staging.yaml  Tiltfile  package.json  project.json  tsconfig.json
platform/crossplane/: Taskfile.yaml  crete-sa.sh  gcpBucket.yaml  gcpProviderConfig.yaml
platform/my-cli/: Cargo.toml
platform/my-cli-lib1/: Cargo.toml
platform/my-rust-state-machine/: Cargo.toml
platform/pulumi/: Pulumi.dev.yaml  project.json
scripts/: .gitpod.Dockerfile  BUILD  Taskfile.yaml  compose.yaml  docker-registry.sh  foo.sh  gcp-identity.sh  main.ts
scripts/container/: build.sh
scripts/setEnvFoo/: index.ts
taskfiles/: Nx.yaml  Pnpm.yaml
(+250 files in other folders)
