[workspace]
members = [
    "apps/rust/k8s-operator",
    "apps/rust/book-controller",
    "apps/rust/k9s-controller",
    "apps/rust/users-redis",
    "apps/rust/users-grpc",
    "libs/rust/grpc",
    "libs/rust/graphql/starwars",
    "libs/rust/mongo",
    "apps/rust/api-graphql",
    "apps/rust/api-rest"
]
