[workspace]
members = ["apps/rust/my-cli", "libs/speedtest", "apps/rust/k8s-operator", "apps/rust/book-controller", "apps/rust/my-operator", "apps/rust/users-redis", "apps/rust/users-grpc", "libs/rust/grpc", "libs/rust/graphql/starwars", "libs/rust/mongo", "apps/rust/api-graphql", "apps/rust/api-rest", "platform/my-cli-lib1", "platform/my-rust-state-machine", "platform/my-cli"]
