[workspace]
members = [
    "apps/rust/personal-cli",
    "apps/rust/k8s-operator",
    "apps/rust/book-controller",
    "apps/rust/my-operator",
    "apps/rust/users-redis",
    "apps/rust/users-grpc",
    "libs/rust/grpc",
    "libs/rust/graphql/starwars",
    "libs/rust/mongo",
    "apps/rust/api-graphql",
    "apps/rust/api-rest",
    "k8s"
]
