bin = []
bench = []
test = []
example = []

[package]
name = "speedtest"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
serde_json = "1.0.93"

[dependencies.clap]
version = "4.1.6"
features = ["derive"]

[lib]
path = "src/lib.rs"
name = "speedtest"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []
crate-type = ["rlib"]
