[package]
name = "api_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.4"
async-graphql-actix-web = "5.0.4"
actix-web = "4.2.1"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
futures-util = "0.3.25"
slab = "0.4.7"
starwars = { path = "../../../libs/rust/graphql/starwars" }
starwars2 = { path = "../../../libs/rust/graphql/starwars2" }
