bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "api_graphql"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "api_graphql"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
actix-web = "4.3.0"
async-graphql = "5.0.5"
async-graphql-actix-web = "5.0.5"
futures-util = "0.3.26"
serde_json = "1.0.93"
slab = "0.4.7"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.starwars]
path = "../../../libs/rust/graphql/starwars"
