[package]
name = "api_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
actix-web = "4.3.1"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
futures-util = "0.3.26"
slab = "0.4.8"
starwars = { path = "../../../libs/rust/graphql/starwars" }
