[package]
name = "api_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
chrono = "0.4.23"
actix-web = "4.2.1"
mongodb = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4.17"
mongo = { path = "../../../libs/rust/mongo" }
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime"] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
schemars = "0.8"
serde_yaml = "0.9.14"
futures = "0.3"
thiserror = "1.0.37"
kube-derive = { version = "0.77.0" }
async-trait = { version = "0.1.58" }
fake = { version = "2.5", features=['derive']}
rand = "0.8"
inject = "0.1.3"
utoipa = { version = "2.4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2.0.2", features = ["actix-web"] }
serde_json = { version = "1.0.91", features = ["arbitrary_precision"] }
plurals = "0.4.0"
validator = { version = "0.16", features = ["derive"] }
actix-cors = "0.6.4"
ts-rs = { version = "6.2.1", features = ["serde-compat"] }
serde_derive = "1.0.151"
