bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "api_rest"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "api_rest"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.17"
mongodb = "2.3.1"
plurals = "0.4.0"
rand = "0.8"
serde_derive = "1.0.152"
thiserror = "1.0.38"

[dependencies.async-trait]
version = "0.1.64"

[dependencies.mongo]
path = "../../../libs/rust/mongo"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.93"
features = ["arbitrary_precision"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]

[dependencies.ts-rs]
version = "6.2.1"
features = ["serde-compat"]

[dependencies.utoipa]
version = "2.4.2"
features = ["actix_extras"]

[dependencies.utoipa-swagger-ui]
version = "3.0.1"
features = ["actix-web"]

[dependencies.validator]
version = "0.16"
features = ["derive"]
