[package]
name = "api_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
actix-web = "4.3.1"
mongodb = "2.4.0"
serde = { version = "1.0.155", features = ["derive"] }
log = "0.4.17"
mongo = { path = "../../../libs/rust/mongo" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
futures = "0.3"
thiserror = "1.0.39"
async-trait = { version = "0.1.66" }
rand = "0.8"
utoipa = { version = "2.4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }
serde_json = { version = "1.0.94", features = ["arbitrary_precision"] }
plurals = "0.4.0"
validator = { version = "0.16", features = ["derive"] }
actix-cors = "0.6.4"
ts-rs = { version = "6.2.1", features = ["serde-compat"] }
serde_derive = "1.0.156"
