[package]
name = "book_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.27"
anyhow = "1.0.70"
log = "0.4.17"
tracing = "0.1.37"
thiserror = "1.0.39"
schemars = "0.8.12"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
