bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "k8s_operator"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "k8s_operator"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
anyhow = "1.0.69"
backoff = "0.4.0"
futures = "0.3.26"
log = "0.4.17"
schemars = "0.8.11"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
thiserror = "1.0.30"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.k8s-openapi]
version = "0.17.0"
features = ["v1_25"]

[dependencies.kube]
version = "0.78.0"
features = ["runtime", "derive"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread", "signal"]
