[package]
name = "my_operator"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[badges]
maintenance = {"status" = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
kube-derive = "0.80.0"
serde_derive = "1.0.154"
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.26"
anyhow = "1.0.68"
log = "0.4.17"
tracing = "0.1.37"
thiserror = "1.0.30"
schemars = "0.8.12"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
