[package]
name = "personal_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "4.1.8", features = ["derive"] }
#reqwest = { version = "0.11.14", features = ["json"] }
#serde = { version = "1.0.152", features = ["derive"] }
#serde_json = "1.0.94"
#tokio = "1.26.0"
#ureq = "2.6.2"


clap = { version = "4.1.8", features = ["derive"] }
miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"
palette = "0.6.1"
rand = "0.8.5"
thiserror = "1.0.37"
