bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "users_grpc"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "users_grpc"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
actix-protobuf = "0.9.0"
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.11.6"
prost-derive = "0.11.6"

[dependencies.grpc]
path = "../../../libs/rust/grpc"
