[package]
name = "users_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-protobuf = "0.9.0"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.11.7"
prost-derive = "0.11.7"
actix-web = "4.3.1"
grpc = { path = "../../../libs/rust/grpc" }
