[package]
name = "users_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.91"
actix-redis = "0.12.0"
redis = { version = "0.22.2", features = ["tokio-comp"]  }
tokio = { version = "1.24.2", features = ["full"] }

[dev-dependencies]
actix-test = "0.1.0"
time = "0.3.17"
