bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "users_redis"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "users_redis"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
actix-redis = "0.12.0"
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.93"

[dependencies.actix-session]
version = "0.7.2"
features = ["redis-actor-session"]

[dependencies.redis]
version = "0.22.3"
features = ["tokio-comp"]

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dev-dependencies]
actix-test = "0.1.0"
time = "0.3.17"
