[package]
name = "users_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.154"
serde_json = "1.0.93"
actix-redis = "0.12.0"
redis = { version = "0.22.3", features = ["tokio-comp"]  }
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
actix-test = "0.1.1"
time = "0.3.20"
