bin = []
bench = []
test = []
example = []

[package]
name = "starwars"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
async-graphql = "5.0.5"
slab = "0.4.7"

[lib]
path = "src/lib.rs"
name = "starwars"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []
crate-type = ["rlib"]
